changed build.gradle file to acommodate the change from JavaFX to Swing