@@ -1,8 +1,7 @@
 plugins {
     alias(libs.plugins.kotlin.jvm)
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.1.0'
-    id("com.github.johnrengelman.shadow") version "7.1.2"
+    id("com.github.johnrengelman.shadow") version '7.1.2'
 }
 
 repositories {
@@ -10,12 +9,6 @@ repositories {
 }
 
 dependencies {
-    implementation "org.openjfx:javafx-controls:23.0.2"
-    implementation "org.openjfx:javafx-fxml:23.0.2"
-    implementation "org.openjfx:javafx-graphics:23.0.2"
-    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
-    testImplementation libs.junit.jupiter.engine
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation libs.guava
 }
 
@@ -25,74 +18,22 @@ java {
     }
 }
 
-javafx {
-    version = "23.0.2"
-    modules = ['javafx.controls', 'javafx.fxml']
-}
-
-//application {
-//    mainClass = 'org.application.TournamentDrawAppKt'
-//    tasks.named("startScripts") {
-//        dependsOn("copyDependencies")
-//    }
-//}
-
 application {
-    mainClass.set("org.application.TournamentDrawAppKt")
+    mainClass.set("org.application.MainKt")
 }
 
-tasks.named('test') {
-    useJUnitPlatform()
-}
-
-task packageApp(type: Exec) {
-    group = 'Build'
-    description = 'Packages the JavaFX application as a native executable.'
-
-    doFirst {
-        delete fileTree("$projectDir") {
-            include "Tournament-Draw-App*/"
+tasks.jar {
+    manifest {
+        attributes["Main-Class"] = application.mainClass.get()
+    }
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    from {
+        configurations.runtimeClasspath.asFileTree.matching {
+            include "**/*.class"
+            include "**/*.properties"
         }
     }
-
-    def javaFxSdkPath = "D:\\Programs\\Projects\\Java\\openjfx-23.0.2_windows-x64_bin-sdk\\javafx-sdk-23.0.2"
-    def timestamp = new Date().format('yyyyMMddHHmmss')
-    def outputDir = "Tournament-Draw-App-${timestamp}"
-
-    commandLine 'jpackage',
-            '--name', outputDir,
-            '--dest', "$projectDir",
-            '--type', 'app-image',
-            '--input', 'build/libs', // Input directory (relative to project)
-            '--main-jar', 'app.jar', // JAR name matches the output of `tasks.jar`
-            '--main-class', 'org.application.TournamentDrawApp',
-            '--module-path', "${javaFxSdkPath}/lib",
-            '--add-modules', 'javafx.controls,javafx.fxml',
-            '--java-options', '--enable-preview'
-    // Optional: '--icon', 'path/to/icon.ico'
 }
-
-tasks.withType(JavaExec).configureEach {
-    jvmArgs = [
-            '--enable-preview',
-            "-Dprism.verbose=true" // JavaFX debug
-    ]
-}
-
-
-//Works but gives an error when trying to open the already made .jar file
-//tasks.jar {
-//    manifest {
-//        attributes["Main-Class"] = application.mainClass.get()
-//    }
-//    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-//    from {
-//        configurations.runtimeClasspath.asFileTree.matching {
-//            include "**/*.class"
-//            include "**/*.properties"
-//        }
-//    }
-//}
 
 tasks.jar {
     archiveFileName = "app.jar"
@@ -106,27 +47,9 @@ tasks.jar {
     from(sourceSets.main.output)
 }
 
-//for a normal jar file which then needs jpackage, a 3rd party software to turn into executable like launch4j or Wix tools
-//jar {
-//    manifest {
-//        attributes 'Main-Class': 'org.application.TournamentDrawAppKt'
-//    }
-//}
-
 shadowJar {
     mergeServiceFiles()
     manifest {
-        attributes 'Main-Class': 'org.application.TournamentDrawApp'
-    }
-}
-
-jar {
-    manifest {
-        attributes(
-                'Main-Class': 'org.application.TournamentDrawApp',
-                'Class-Path': configurations.runtimeClasspath.files.collect {
-                    "lib/${it.name}"
-                }.join(' ')
-        )
+        attributes 'Main-Class': 'org.application.Main'
     }
 }
